{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 72,
  "lineage": "39e852c4-9baf-e98e-16fb-b1523f0edda0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355676058:internet-gateway/igw-0d300f127f1e75fa3",
            "id": "igw-0d300f127f1e75fa3",
            "owner_id": "124355676058",
            "tags": {
              "Name": "MyVPC-ig"
            },
            "tags_all": {
              "Name": "MyVPC-ig"
            },
            "vpc_id": "vpc-0bc41e8d555fd6004"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355676058:route-table/rtb-045f886830378fb1a",
            "id": "rtb-045f886830378fb1a",
            "owner_id": "124355676058",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d300f127f1e75fa3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyVPC-rtb"
            },
            "tags_all": {
              "Name": "MyVPC-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc41e8d555fd6004"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-ig",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5b6b0e25c459274",
            "route_table_id": "rtb-045f886830378fb1a",
            "subnet_id": "subnet-0b2d630bab3ee59fe"
          },
          "dependencies": [
            "aws_internet_gateway.new-ig",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030a355026aa6804a",
            "route_table_id": "rtb-045f886830378fb1a",
            "subnet_id": "subnet-02566861e50bd1a83"
          },
          "dependencies": [
            "aws_internet_gateway.new-ig",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355676058:security-group/sg-0870347d81e7776cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0870347d81e7776cd",
            "ingress": [],
            "name": "terraform-20240907213238188000000001",
            "name_prefix": "terraform-",
            "owner_id": "124355676058",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MyVPCsg"
            },
            "tags_all": {
              "Name": "MyVPCsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc41e8d555fd6004"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355676058:subnet/subnet-0b2d630bab3ee59fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2d630bab3ee59fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124355676058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC-subnet-0"
            },
            "tags_all": {
              "Name": "MyVPC-subnet-0"
            },
            "vpc_id": "vpc-0bc41e8d555fd6004"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355676058:subnet/subnet-02566861e50bd1a83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02566861e50bd1a83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124355676058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC-subnet-1"
            },
            "tags_all": {
              "Name": "MyVPC-subnet-1"
            },
            "vpc_id": "vpc-0bc41e8d555fd6004"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355676058:vpc/vpc-0bc41e8d555fd6004",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06eb92d84a53ce874",
            "default_route_table_id": "rtb-03c4682cba4b6635e",
            "default_security_group_id": "sg-08153fac525448e99",
            "dhcp_options_id": "dopt-0dc22150838e30fe0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc41e8d555fd6004",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c4682cba4b6635e",
            "owner_id": "124355676058",
            "tags": {
              "Name": "MyVPC-vpc"
            },
            "tags_all": {
              "Name": "MyVPC-vpc"
            }
          }
        }
      ]
    }
  ]
}